<resources>
    <string name="Continue">Continue</string>
    <string name="Inverter_switch_off">Inverter switch is OFF.</string>
    <string name="Total">Total</string>
    <string name="_fan_speed">Fan Speed</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_issue">About Issue</string>
    <string name="ac_control">AC Control</string>
    <string name="ac_filter_clean">AC Filter Clean</string>
    <string name="ac_filter_clean_description">Check your AC filter status.</string>
    <string name="ac_filter_clean_note">Note :- As a general rule, you should clean your air conditioner filters within the indoor unit in every two weeks. In more dusty or polluted environments you should clean your filters more regularly.</string>
    <string name="ac_info_text">Press the above button twice and check whether the AC responds. If not, try the next model by tapping the right arrow button.</string>
    <string name="ac_is_off">AC is OFF</string>
    <string name="ac_is_on">AC is ON</string>
    <string name="ac_manufacturer_name">AC Manufacturer Name *</string>
    <string name="ac_mode">AC Mode</string>
    <string name="ac_model_number">AC Model Number *</string>
    <string name="ac_remote_config_description">Set up your AC remote configuration.</string>
    <string name="ac_remote_configuration">AC Remote Configuration</string>
    <string name="ac_remote_configuration_wifi_connection_alert">This feature will work only when the Stabilizer is turned on and connected to Internet.</string>
    <string name="ac_remote_manufacture_list_error">Fetching AC manufacture list is failed.</string>
    <string name="ac_run_on_time">AC On Time (HH:MM)</string>
    <string name="ac_settings">AC Settings</string>
    <string name="accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_address">Add Address</string>
    <string name="add_alternate_number">Add Alternate Number</string>
    <string name="add_alternate_number_msg">Please add your alternate number.</string>
    <string name="add_alternate_number_success_msg">Your alternate mobile number has been added successfully.</string>
    <string name="add_custom_remote">Add Custom Remote</string>
    <string name="add_details">Add Details</string>
    <string name="add_email">Add Email</string>
    <string name="add_email_msg">Please add your email id.</string>
    <string name="add_email_success_msg">Your email id has been added successfully.</string>
    <string name="add_login_password">Add Login Password</string>
    <string name="add_mobile_number">Add Mobile Number</string>
    <string name="add_mobile_number_msg">Please add your mobile number.</string>
    <string name="add_mobile_number_success_msg">Your mobile number has been added successfully.</string>
    <string name="add_new_prod">Add Product</string>
    <string name="add_product">+ Add Product</string>
    <string name="add_product_details">Add product details</string>
    <string name="add_remove_fan">Add/Remove fan</string>
    <string name="add_solar_panels">Add Solar Panels</string>
    <string name="add_user">Add User</string>
    <string name="address">Address</string>
    <string name="address_added">New address added successfully.</string>
    <string name="address_fetching_failed">Address fetching failed.</string>
    <string name="address_hint">Address *</string>
    <string name="address_needed">Address Needed</string>
    <string name="address_removed">Your address removed successfully.</string>
    <string name="address_updated">Your address updated successfully.</string>
    <string name="advance_battery_low_alarm">Advance Battery Low Alarm</string>
    <string name="air_purifier">Air Purifier</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_if_load_exceeds">Alarm if load exceeds</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="alert">Alert!</string>
    <string name="alert_already_registered_indian_user">"If you’re already a V-Guard app user, go to Login page and use your registered Mobile Number with OTP to login.

 New User? Just continue to get started."</string>
    <string name="alert_already_registered_other_country_user">"If you’re already a V-Guard app user, go to Login page and use your registered Email Id with Password/OTP to login.

New User? Just continue to get started."</string>
    <string name="alert_disable_intelligent_mode_breeze">Please disable i-mode to access breeze mode.</string>
    <string name="alert_disable_intelligent_mode_fan_speed">Please disable i-mode to access fan speed.</string>
    <string name="alert_disable_intelligent_mode_power_off">Please disable i-mode to turn OFF the Imagina.</string>
    <string name="alert_display_flip_enable">Display Flip can be enabled only if Fan Display UI is enabled.</string>
    <string name="alert_enquiry_submit_success">Thank you for reaching out to us. Our representative will contact you soon.</string>
    <string name="alert_rhythm_mode_color_selection">Disable Rhythm Mode for setting the color.</string>
    <string name="alert_rhythm_mode_color_selection_schedule">Rhythm Mode does not support color selection.</string>
    <string name="alert_success">Success</string>
    <string name="alert_switch_on_fan">Please switch on your Imagina.</string>
    <string name="alert_sync_failed">Sync Failed</string>
    <string name="alert_title">Alert</string>
    <string name="all_day">ALL DAYS</string>
    <string name="all_fans">All Fans</string>
    <string name="all_modes_disabling_error_message">"You can't disable all the lighting modes at once."</string>
    <string name="all_products">All Products</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="alternate_number_delete_message">Alternate number will be deleted from your account. Press OK to continue.</string>
    <string name="alternate_number_delete_success_msg">Alternate mobile number deleted successfully.</string>
    <string name="alternate_number_verification_msg">We will share a verification code on the entered alternate mobile number.</string>
    <string name="alternate_phone_number">Alternate Mobile Number</string>
    <string name="amazon_alexa_instruction_fan">&amp;#8226;&lt;b>&amp;nbsp;(Alexa users) - &lt;/b> &amp;quot;Ask v guard smart&amp;quot;&lt;br/>&lt;br/> For Connect to Device, e.g. if nickname for the Product 1 is “NICKNAME1”, Product 2 is “NICKNAME2” and Product 3 is “NICKNAME3”, then say…&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn on fan in NICKNAME1&amp;quot;– For the next command, nickname is not required.&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn off fan&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn on schedule 1&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn off schedule 1&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn on fan at 4 speed from 3:00 pm for 1 hour&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn on sleep mode in NICKNAME2&amp;quot;- For the next command, nickname is not required.&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn off sleep mode&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn on Breeze mode 1&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn off Breeze mode 1&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Set fan speed 4&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Status of schedule 1&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Detailed status in NICKNAME3&amp;quot; - For the next command, nickname is not required.&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn on holiday mode from 20 July to 20 August&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Turn off holiday mode&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;Tell me something about V Guard smart fan&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;What is V Guard customer care number&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;There is an issue with the product, what should I do&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;What are the commands in NICKNAME3&amp;quot;&lt;br/>&lt;br/> &amp;#8226;&amp;nbsp;&amp;quot;QR code in NICKNAME3&amp;quot;&lt;br/>&lt;br/></string>
    <string name="available_devices">Available Devices</string>
    <string name="bldc_fan_label">BLDC Fan</string>
    <string name="calculator">Calculator</string>
    <string name="change_login_password">Change Login Password</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="contact_us">Contact Us</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_details">Edit Details</string>
    <string name="edit_prod_details">Edit Product Details</string>
    <string name="light_control_title">Light Control</string>
    <string name="loop_timer">Loop Timer</string>
    <string name="more">More</string>
    <string name="my_address">My Address</string>
    <string name="my_addresses">My Addresses</string>
    <string name="my_products">My Products</string>
    <string name="on_grid_calculator">On-Grid Solar Calculator</string>
    <string name="plug_energy_monitoring">Energy Monitoring</string>
    <string name="product_info">Product Info</string>
    <string name="product_settings">Product Settings</string>
    <string name="profile">Profile</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="reconfiguration">Reconfiguration</string>
    <string name="share_product">Share Product</string>
    <string name="user_assistance">User Assistance</string>
    <string name="verano_configuration">Verano Configuration</string>
    <string name="voice_assistance">Voice Assistance</string>
    <string name="wifi_settings">WiFi Settings</string>
</resources>