<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/stabilizer_navigation" app:startDestination="@id/fragment_plug_dashboard"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="" android:name="com.vguard.smart.view.plug.PlugDashboardFragment" android:id="@id/fragment_plug_dashboard">
        <action android:id="@id/action_fragment_plug_dashboard_to_productSettingsFragment" app:destination="@id/productSettingsFragment" />
        <action android:id="@id/action_fragment_plug_dashboard_to_plugCreateScheduleFragment" app:destination="@id/plugCreateScheduleFragment" />
        <action android:id="@id/action_fragment_plug_dashboard_to_plugLoopTimerFragment" app:destination="@id/plugLoopTimerFragment" />
        <action android:id="@id/action_fragment_plug_dashboard_to_productInfoFragment" app:destination="@id/productInfoFragment" />
        <action android:id="@id/action_fragment_plug_dashboard_to_energyMonitoringFragment" app:destination="@id/plugEnergyMonitoringFragment" />
    </fragment>
    <fragment android:name="com.vguard.smart.view.home.myproducts.ProductDetailsFragment" android:id="@id/productDetailsFragment">
        <action android:id="@id/action_productDetailsFragment_to_productEditFragment" app:destination="@id/productEditFragment" />
        <action android:id="@id/action_productDetailsFragment_to_productSettingsFragment" app:destination="@id/productSettingsFragment" />
        <action android:id="@id/action_productDetailsFragment_to_productShareFragment" app:destination="@id/productShareFragment" />
    </fragment>
    <fragment android:label="@string/edit_prod_details" android:name="com.vguard.smart.view.home.myproducts.edit.ProductEditFragment" android:id="@id/productEditFragment" />
    <fragment android:label="@string/product_settings" android:name="com.vguard.smart.view.home.myproducts.ProductSettingsFragment" android:id="@id/productSettingsFragment" />
    <fragment android:label="@string/share_product" android:name="com.vguard.smart.view.home.myproducts.ProductShareFragment" android:id="@id/productShareFragment" />
    <fragment android:label="@string/product_info" android:name="com.vguard.smart.view.home.myproducts.ProductInfoFragment" android:id="@id/productInfoFragment" />
    <fragment android:label="" android:name="com.vguard.smart.view.plug.PlugCreateScheduleFragment" android:id="@id/plugCreateScheduleFragment" />
    <fragment android:label="@string/loop_timer" android:name="com.vguard.smart.view.plug.PlugLoopTimerFragment" android:id="@id/plugLoopTimerFragment" />
    <fragment android:label="@string/plug_energy_monitoring" android:name="com.vguard.smart.view.plug.PlugEnergyMonitoringFragment" android:id="@id/plugEnergyMonitoringFragment" />
</navigation>