<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/navigation_more" app:startDestination="@id/more_fragment"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="@string/more" android:name="com.vguard.smart.view.home.more.MoreFragment" android:id="@id/more_fragment">
        <action android:id="@id/action_more_fragment_to_calculatorFragment" app:destination="@id/calculator_fragment" />
        <action android:id="@id/action_more_fragment_to_user_assistance_fragment" app:destination="@id/user_assistance_fragment" />
        <action android:id="@id/action_more_fragment_to_contact_us_fragment" app:destination="@id/contact_us_fragment" />
    </fragment>
    <fragment android:label="@string/calculator" android:name="com.vguard.smart.view.home.more.calculator.CalculatorFragment" android:id="@id/calculator_fragment">
        <action android:id="@id/action_calculatorFragment_to_on_grid_solar_calculator_fragment" app:destination="@id/on_grid_solar_calculator_fragment" />
    </fragment>
    <fragment android:label="@string/on_grid_calculator" android:name="com.vguard.smart.view.home.more.calculator.OnGridSolarCalculatorFragment" android:id="@id/on_grid_solar_calculator_fragment">
        <action android:id="@id/action_on_grid_solar_calculator_fragment_to_on_grid_solar_calculator_enquiry_fragment" app:destination="@id/on_grid_solar_calculator_enquiry_fragment" />
    </fragment>
    <fragment android:label="@string/on_grid_calculator" android:name="com.vguard.smart.view.home.more.calculator.OnGridSolarCalculatorEnquiryFragment" android:id="@id/on_grid_solar_calculator_enquiry_fragment" />
    <fragment android:label="@string/user_assistance" android:name="com.vguard.smart.view.home.profile.UserAssistanceFragment" android:id="@id/user_assistance_fragment">
        <action android:id="@id/action_user_assistance_fragment_to_user_assistance_model_fragment" app:destination="@id/user_assistance_model_fragment" />
    </fragment>
    <fragment android:name="com.vguard.smart.view.home.profile.UserAssistanceModelFragment" android:id="@id/user_assistance_model_fragment" />
    <fragment android:label="@string/contact_us" android:name="com.vguard.smart.view.home.profile.ContactUsFragment" android:id="@id/contact_us_fragment" />
</navigation>